--- a/index.html
+++ b/index.html
@@ -485,15 +485,61 @@ document.location = "http://go.vegasfiesta.com/fr";
     </div>
 </section>
 
+<section class="mbr-section mbr-section-small mbr-footer" id="contacts3-e" data-rv-view="38" style="background-color: rgb(55, 56, 62); padding-top: 6rem; padding-bottom: 6rem;">
+    
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-md-3">
+                <p><strong>Adresse</strong><br>
+32 rue Saint Marc<br>
+Paris 750002<br><br>
+<strong>Contacter</strong><br>
+Email: support@vegasfiesta.com<br><br></p>
+            </div>
+            <div class="col-xs-12 col-md-3"><ul></ul></div>
+            <div class="col-xs-12 col-md-6" data-form-type="formoid">
+                <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Merci !</div></div>
+                <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
+                    <input type="hidden" value="B00EMjwNRllICvF0eZPdYyPkvdEpAMDPTZJDrm5x2qK9EkXdVB8n9rFwDk2xLUwWufusAPPbdqY0TvLPvnH2lMzyWTvrkbE2jnexp+yplVQIu0F2nzYBgmdaypdpbjXl" data-form-email="true">
+                    
+                    <div class="form-group">
+                        <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
+                    </div>
+                    <div class="form-group">
+                        <input type="tel" class="form-control input-sm input-inverse" name="phone" placeholder="Phone" data-form-field="Phone">
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control input-sm input-inverse" name="message" rows="4" placeholder="Message" data-form-field="Message"></textarea>
+                    </div>
+                    <div class="text-xs-right"><button type="submit" class="btn btn-black">Envoi</button></div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-d" data-rv-view="36" style="background-color: rgb(255, 7, 0); padding-top: 6rem; padding-bottom: 0rem;">
+    <!-- Gallery -->
+    <div class="mbr-section__container mbr-gallery-layout-article addons-container addons-row">
+            <div class=" addons-container-inner">
+                <figure class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-outside-bottom">
+                    <iframe class="mbr-embedded-video" frameborder="0" allowfullscreen="" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F293789851&amp;amp;auto_play=true&amp;amp;hide_related=false&amp;amp;show_comments=true&amp;amp;show_user=true&amp;amp;show_reposts=false&amp;amp;visual=true"></iframe>
+                </figure>
+            </div>
+        <div class="clearfix"></div>
+    </div>
+</section>
+
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/smooth-scroll/SmoothScroll.js"></script>
   <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
   <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/jquery-mb-ytplayer/jquery.mb.YTPlayer.min.js"></script>
+  <script src="assets/smooth-scroll/SmoothScroll.js"></script>
   <script src="assets/puritym/js/script.js"></script>
+  <script src="assets/formoid/formoid.min.js"></script>
   
   
 <input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
